fix(gux-form-field): fixed form input overflow issue and fixed gux-input-number input alignment
COMUI-585

--- a/src/components/stable/gux-form-field/gux-form-field.less
+++ b/src/components/stable/gux-form-field/gux-form-field.less
@@ -18,6 +18,11 @@ gux-form-field {
       line-height: 20px;
     }
 
+    .gux-input-container input {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
     .gux-input-error .gux-input-container {
       border-color: @gux-alert;
     }
